--- a/main.css
+++ b/main.css
@@ -1,3 +1,4 @@
+/*
 body {
   background: #2b2b2b;
   height: 100vh;
@@ -5,34 +6,19 @@ body {
   display: flex;
   align-items: center;
   justify-content: center;
-  text-align: center;
-  font-family: Helvetica neue, roboto;
 }
-
-.container {
-  display: inline-block;
-  width: 80%;
-  margin: 0 auto;
-  padding: 10px;
-  /*border: 1px solid cyan;*/
-}
-
-.row {
-  float: left;
-  text-align: center;
-  width: 100%;
-  height: 100px;
-}
-
-.inputtag {
-  margin: 5px;
-  margin-top: 1em;
-}
-
 h1 {
+  color: #bdbdbd;
+}
+
+*/
+
+#demo,
+#info {
   position: relative;
   color: red;
-  font-weight: 300;
+  font-size: 16px;
+  font-weight: 600;
 }
 
 .highlight {
